Bug 17671 - objcopy/strip don't understand -D/-U options
Summary: objcopy/strip don't understand -D/-U options
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.26
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-02 20:13 UTC by Alexander Cherepanov
Modified: 2014-12-24 14:54 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
Patch to add "DU" to getopt_long (353 bytes, patch)
2014-12-02 20:13 UTC, Alexander Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Cherepanov 2014-12-02 20:13:19 UTC
Created attachment 7984 [details]
Patch to add "DU" to getopt_long

-D/-U, short counterparts for the --{enable,disable}-deterministic-archives options are not understood by objcopy/strip.

Patch attached. I don't see any order in the list of options in getopt_long so I added "DU" to the end.
Comment 1 Sourceware Commits 2014-12-24 14:53:23 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "gdb and binutils".

The branch, master has been updated
       via  7a093a782000c0d0f1a50d6a74ee786695f52c86 (commit)
      from  ed4fd7b7f30020dfdcd79cfd1e36672395f905d7 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=7a093a782000c0d0f1a50d6a74ee786695f52c86

commit 7a093a782000c0d0f1a50d6a74ee786695f52c86
Author: Alexander Cherepanov <cherepan@mccme.ru>
Date:   Wed Dec 24 14:50:53 2014 +0000

    This patch fixes a snafu where the -D and -U short versions of the
    --enable-deterministic-archives and --disable-deteministic-archive
    options were not being accepted.
    
    	PR binutils/17671
    	* objcopy.c (copy_main, strip_main): Add D and U to the list of
    	accepted short versions of long options.

-----------------------------------------------------------------------

Summary of changes:
 binutils/ChangeLog |    6 ++++++
 binutils/objcopy.c |    4 ++--
 2 files changed, 8 insertions(+), 2 deletions(-)
Comment 2 Nick Clifton 2014-12-24 14:54:31 UTC
Hi Alexander,

  I have applied your patch.

  Sorry for the long delay in repsonding to this PR.  I have been very busy fixing memory access violations problems of late...

Cheers
  Nick