This patch fixes a snafu where the -D and -U short versions of the --enable-deterministic-archives and --disable-deteministic-archive options were not being accepted.

PR binutils/17671
	* objcopy.c (copy_main, strip_main): Add D and U to the list of
	accepted short versions of long options.